...
                                            showDialog<String>(
                                                context: context,
                                                builder:
                                                    (BuildContext context) =>
                                                        AlertDialog(
                                                          title: const Text(
                                                              'Supprimer mon compte'),
                                                          content: const Text(
                                                              'Êtes-vous sûr de vouloir supprimer votre compte ?'),
                                                          actions: <Widget>[
                                                            TextButton(
                                                              onPressed: () =>
                                                                  Navigator.pop(
...
                                                            TextButton(
                                                              onPressed: () {
                                                                model
                                                                    .deleteUser();
                                                                Navigator.pop(
                                                                    context,
                                                                    'Supprimer');
                                                              },
                                                              child: const Text(
                                                                  'Supprimer'),
                                                            ),
                                                          ],
                                                        ));
...
