...
    return ChangeNotifierProvider(
      create: (nContext) => HomeScreenViewModel(nContext),
      child: Scaffold(
        appBar: AppBar(
          title: const Text('HELMoliday'),
        ),
        key: const Key('home_screen'),
        body: Consumer<HomeScreenViewModel>(
          builder: (context, viewModel, child) {
            return RefreshIndicator(
              onRefresh: () {
                viewModel.refreshData();
                return Future.value();
...
