...
                        padding: const EdgeInsets.fromLTRB(4, 0, 0, 0),
                        child: MaterialButton(
                            onPressed: () {
                              Navigator.pushReplacement(context, LoginScreen.route());
                            },
                            child: const Text(
                              "Se connecter",
                              textAlign: TextAlign.start,
                              overflow: TextOverflow.clip,
                              style: TextStyle(
                                fontWeight: FontWeight.w700,
                                fontStyle: FontStyle.normal,
                                fontSize: 14,
...
