...
                onPressed: () {
                  viewModel.goToEditHoliday();
                },
                icon: const Icon(Icons.edit),
              ),
              IconButton(
                key: const Key("deleteHolidayButton"),
                onPressed: () {
                  Widget cancelButton = TextButton(
                    key: const Key("cancelDeleteButton"),
                    child: const Text("Annuler"),
                    onPressed: () {
                      Navigator.of(context).pop();
                    },
                  );
                  Widget continueButton = TextButton(
                    key: const Key("confirmDeleteButton"),
                    onPressed: () {
                      viewModel.removeHoliday();
                      Navigator.of(context).pop();
                    },
                    child: const Text("Supprimer"),
                  );
...
