...
                  );
                }),
                floatingActionButton: FloatingActionButton(
                  onPressed: () async {
                    viewModel.goToCreateHoliday();
                  },
                  key: const Key('addHolidayButton'),
                  child: const Icon(Icons.add),
                ),
              )),
    );
  }
}
...
